# Movie-Recommender-Data-Warehouse

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  automate_transformation.sh  daily_schedule.sh  deploy.ps1  how df714d9  pyproject.toml  run.sh
API_Project/Project/: index.html  main.py  models.py  movie_actors.csv  movie_director.csv  movies.csv  pyvenv.cfg  ratings.csv  readme.md
API_Project/Project/Scripts/: activate  activate.bat
DWH/: Readme.md
DWH/SSIS pipelines/: Actors, Directors, Movies.dtsx  Movies_Piplines.dtproj  Movies_Piplines.sln  Tags, Users.dtsx  readme.md
Database_all_in/Database_Queries/: readme.md
Database_all_in/Tables/: Readme.md  dbo.Actor.sql  dbo.MovieActor.sql  dbo.MovieDirector.sql  dbo.Movies.sql  dbo.Ratings.sql  dbo.Reviews.sql  dbo.TagsApplication.sql  dbo.Users.sql
Preprocessing_scripts/: Data_normalization.py  Exploration_analysis.py  Metadata_Transformations.py  To_csv.py  debug_transformation.py  readme.md
Raw_Data/: readme.md
Raw_Data/csv/2024-10-18/: metadata.csv  ratings.csv
Raw_Data/raw/2024-10-18/: metadata.json  ratings.json
config/: base_config.py
recommenders/: Readme.md  faiss_recommender.py  model_interface.py  recommender.py
utils/: save_load.py
